# nmlbot

./: .gitignore  Cargo.toml  Dockerfile  README.md
migrations/: 20220901095956_init.up.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  transcripts.rs
src/api/: mod.rs
src/api/imdb/: imdb_api.rs  mod.rs
src/api/notion/: mod.rs  objects.rs
src/bot/: handler.rs  mod.rs
