[package]
name = "nmlbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.10", features = ["macros", "auto-send", "webhooks-axum"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "decimal" ] }
thiserror = "1.0"
reqwest = "0.11"
serde_json = "1.0"
chrono = "0.4"
async-trait = "0.1.57"
lazy_static = "1.4.0"
